Edited CORS config(7)